# rag-movie-search

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: pull-request-ci-cd.yml
embeddings/: embed.py  schema.py
ingestion/: download_dataset.py  load_data.py
reranking/: rerank.py
scripts/: history.py  posters.py  query.py  ratings.py
