[project]
name = "rag-movie-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=8.0.1",
]

[tool.isort]
profile = "black"
line_length = 100
