[project]
name = "rag-movie-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "fastembed>=0.8.0",
    "google-genai>=2.12.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=8.0.1",
]

[tool.isort]
profile = "black"
line_length = 100
